--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.511.0",
+    "mammoth": "^1.9.1",
     "next": "15.3.3",
     "openai": "^5.0.1",
     "react": "^19.0.0",
